Update page title to VitalSense

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sahil UI - Premium React Experience</title>
+    <title>VitalSense</title>
     <meta
       name="description"
       content="A premium, high-performance React application with modern aesthetics and smooth animations."
